# comunic

./: .gitignore  Cargo.toml  README.md  device_client.py  pyproject.toml  requirements.txt  run_mesh.bat  setup_mesh.ps1  start_universal.py  unified_hub.py
.cargo/: config.toml
Communication-master/: .gitignore  drone_network.py  serve.py  start_universal.py  unified_hub.py
Communication-master/scripts/: start_device.sh  start_drone.sh
Communication-master/src/: main.rs  wasm_api.rs
Communication-master/src/crypto/: key_manager.rs  kyber.rs  mod.rs
Communication-master/src/device/: client_device.rs  mod.rs
Communication-master/src/drone/: mod.rs
Communication-master/src/network/: mod.rs  protocol.rs  server.rs
Communication-master/web_app/: app.js  index.html  style.css
config/: settings.toml
scripts/: start_device.ps1
src/: lib.rs  python_api.rs
src/crypto/: dilithium.rs
src/drone/: central_drone.rs
src/network/: client.rs
web_app/: app.js
