[package]
name = "drone_mesh_comms"
version = "0.1.0"
edition = "2021"

[lib]
name = "drone_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
pqc_kyber = { version = "0.7", features = ["kyber512", "wasm"] }
dilithium-rs = "0.1"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# Utilities
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"

# WebAssembly
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Networking
tokio-tungstenite = "0.21"
tungstenite = "0.21"
url = "2.5"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
futures-util = "0.3.32"
pyo3 = { version = "0.20", features = ["extension-module", "anyhow"], optional = true }

[features]
default = []
python = ["dep:pyo3"]
wasm = []
