[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "drone-mesh-comms"
version = "0.1.0"
description = "Post-Quantum Secure Drone Mesh Communication"
dependencies = [
    "websockets>=12.0",
    "zeroconf>=0.131.0",
    "aiohttp>=3.9.0"
]
requires-python = ">=3.8"

[tool.maturin]
features = ["python"]
module-name = "drone_crypto"
